Fixed issue of spacing of quotes when changing between filters

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@
   
 .App h2:nth-of-type(1) {
     color: #506C64; 
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 10px;
  }
   
