--- a/frontend/src/Quote.css
+++ b/frontend/src/Quote.css
@@ -34,7 +34,7 @@
 .messages {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 40px;
+    grid-column-gap: 70px;
     max-width: 1400px;
     margin: 30px;
 }
